welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: not found: value pos2
     if (nums(i)>=pos&&pos2!=0) {
                       ^